--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html>
-   <head>
-      <title>Hello World!</title>
-   </head>
-   <body>
-      <h1>Hello World!</h1>
-   </body>
+<html lang="en">
+    <head>
+        <title>Title Goes here</title>
+    </head>
+    <body>
+    
+    </body>
 </html>
