--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
         <!-- GOOGLE FONTS-->
         <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+        <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -25,22 +26,23 @@
                         </ul>
                     </nav>
                 </div>
-                <h2><span>Hi,</span> I'm a developer that loves clean &amph3 elegant code.</h2>
+                <h2><span>Hi,</span> I'm a developer that loves clean &amp; elegant code.</h2>
             </div>
         </header>
         <main>
+            <!-- ABOUT SECTION -->
                 <section id="about">
                     <div class="full-width">
+                        <h2>A little about me.</h2>
                         <div class="half-width">
-                            <h2>A little about me.</h2>
                             <p>I've made my home base in Providence, Rhode Island, with my small growing family. My journey into tech started with a degree in journalism. As I started sharing my writing online, I was fascinated with how easily I could get my voice out there. I was hooked and wanted to learn how to build my own site to fit my specific needs.</p>
-
                         </div>
                         <div class="half-width">
                             <p>That curiosity then opened a door that could never be shut. When I learned how to build my first website, I realized I found something that gave me the freedom & versatility I was looking forin my work. Now I've made a full switch to front-end development, where I can use my organization skills and eye for detail to write clean, elegant code.</p>
                         </div>
                     </div>
                 </section>
+                <!-- WORK SECTION -->
             <section id="work">
                 <div class="full-width">
                     <div class="third-width">
@@ -60,16 +62,17 @@
                     </div>
                 </div>
             </section>
+            <!-- CONTACT SECTION -->
             <footer id="contact">
                 <div class="full-width">
                     <div class="half-width">
-                        <img src="img/contact.png" alt="image of a woman typing on a laptop wearing a white shirt and balck blazer">
+                        <img id="contact-img" src="img/contact.png" alt="image of a woman typing on a laptop wearing a white shirt and balck blazer">
                     </div>
                     <div class="half-width">
                         <h2>Like what you see?</h2>
-                        <h3>Let's meet for a cup of coffee.</h3>
-                        <img src="img/icon-envelope.png" alt="envelope icon"><p>hi[@]jubileeausten.com</p>
-                        <p><strong>Or, find me on the interwebs</strong></p>
+                        <h3 id="email-header">Let's meet for a cup of coffee.</h3>
+                        <a href="#"><img id="envelope" src="img/icon-envelope.png" alt="envelope icon">hi[@]jubileeausten.com</a>
+                        <h3 id="socialmedia-header"><strong>Or, find me on the interwebs</strong></h3>
                         <ul>
                             <li><a href="#"><img src="img/icon-twitter.png" alt="twitter icon"></a></li>
                             <li><a href="#"><img src="img/icon-tumblr.png" alt="tumblr icon"></a></li>
